crates/aranya-policy-compiler/tests/data/type_errors/update_fact_value_type_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: int
  |
1 | fact Foo[x int]=>{y bool}
  |                   - expected because of this
...
7 |             update Foo[x: 0]=>{y: ?} to {y: 3}
  |                                             ^ expected `bool` but found `int`
